<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_main">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_account"
            android:title="@string/profile" />
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting" />
    </group>

    <group android:id="@+id/group_order">
        <item
            android:id="@+id/menu_categories"
            android:icon="@drawable/ic_category"
            android:title="@string/category" />
        <item
            android:id="@+id/menu_products"
            android:icon="@drawable/ic_inventory"
            android:title="@string/products" />
        <item
            android:id="@+id/menu_customers"
            android:icon="@drawable/ic_human"
            android:title="@string/customers" />
    </group>

    <group android:id="@+id/order">

        <item
            android:id="@+id/menu_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/orders" />
        <item
            android:id="@+id/order_history"
            android:icon="@drawable/ic_history"
            android:title="@string/order_history" />
    </group>

    <group android:id="@+id/group_support">
        <item
            android:id="@+id/menu_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notifications" />
        <item
            android:id="@+id/menu_help_support"
            android:icon="@drawable/ic_support"
            android:title="@string/help_support" />
    </group>

    <group android:id="@+id/group_auth">
        <item
            android:id="@+id/menu_login"
            android:icon="@drawable/ic_login"
            android:title="@string/login" />
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>

</menu>
