<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="@color/background"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    android:padding="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:background="@drawable/circular_background">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/user_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/user_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/user_image"
            app:layout_constraintTop_toBottomOf="@id/user_name" />

        <ImageView
            android:id="@+id/edit_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/circular_background"
            android:clickable="true"
            android:contentDescription="@string/edit"
            android:focusable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_edit"
            app:layout_constraintEnd_toStartOf="@id/delete_image"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/delete_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/circular_background"
            android:clickable="true"
            android:contentDescription="@string/delete"
            android:focusable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
